--- a/styles/site.css
+++ b/styles/site.css
@@ -136,6 +136,28 @@ nav a:hover {
   border-bottom: 0px;
 }
 
+/* footer */
+.footer {
+  background-color: #bf0000;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  color: #ffffff;
+
+  position: sticky;
+  top: 0px;
+
+  box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  margin: 15px;
+  padding: 15px;
+}
+
+.footer a {
+  color: #ffffff;
+}
+
 /* eboard cards */
 
 .eboard-grid {
