--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -3,7 +3,8 @@ html {
   flex-direction: column;
   flex-grow: 1;
   margin-bottom: 125px;
-  padding: 150px;
+  padding-right: 150px;
+  padding-left: 150px;
 }
 
 .body {
@@ -268,6 +269,20 @@ nav a:hover {
   text-align: center;
 }
 
+#error-page img {
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  border-radius: 0px;
+}
+
+#error-page button {
+  border: #797979 1px solid;
+  fill: #797979;
+  border-radius: 5px;
+}
+
+#error-page a {
+  color: #797979;
+}
 
 /* form */
 .form-buttons {
