--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -20,10 +20,19 @@ img {
   margin: 15px;
 }
 
-header figure {
+header img {
   display: block;
   width: 400px;
   margin: auto;
+  box-shadow: 0px 0px 0px 0px;
+}
+
+header #title {
+  color: #BF0000;
+  display: flex;
+  text-align: center;
+  margin: auto;
+  margin-left: 20px;
 }
 
 a {
